exports[`Suite createSchema should create from a complex nested definition 1`] = `
Object {
  "geo": Object {
    "iterable": true,
    "propTypes": [Function],
    "value": Object {
      "coord": Object {
        "iterable": false,
        "propTypes": [Function],
        "value": -1,
      },
      "country": Object {
        "iterable": true,
        "propTypes": [Function],
        "value": Object {
          "id": Object {
            "iterable": false,
            "propTypes": [Function],
            "value": -1,
          },
        },
      },
      "flag": Object {
        "iterable": true,
        "propTypes": [Function],
        "value": Array [
          Object {
            "iterable": false,
            "propTypes": [Function],
            "value": "",
          },
          Object {
            "iterable": false,
            "propTypes": [Function],
            "value": "",
          },
        ],
      },
    },
  },
}
`;

exports[`Suite createSchema should create from a complex non-nested definition 1`] = `
Object {
  "Default": Object {
    "contacts": Array [],
    "geo": Object {},
    "getName": undefined,
    "name": "",
    "year": -1,
  },
  "PropTypes": Object {
    "contacts": [Function],
    "geo": [Function],
    "getName": [Function],
    "name": [Function],
    "year": [Function],
  },
  "transform": [Function],
}
`;

exports[`Suite createSchema should create from a simple nested definition 1`] = `
Object {
  "contact": Object {
    "iterable": true,
    "propTypes": [Function],
    "value": Array [
      Object {
        "iterable": false,
        "propTypes": [Function],
        "value": -1,
      },
      Object {
        "iterable": false,
        "propTypes": [Function],
        "value": -1,
      },
    ],
  },
  "name": Object {
    "iterable": false,
    "propTypes": [Function],
    "value": "",
  },
}
`;

exports[`Suite createSchema should create from a simple non-nested definition 1`] = `
Object {
  "Default": Object {
    "name": "",
    "year": -1,
  },
  "PropTypes": Object {
    "name": [Function],
    "year": [Function],
  },
  "transform": [Function],
}
`;

exports[`Suite parsers should create an schema given an array 1`] = `Array []`;

exports[`Suite parsers should create an schema given an object 1`] = `Object {}`;

exports[`Suite parsers should create the schema default values 1`] = `
Object {
  "arr": undefined,
  "dispatch": undefined,
  "func": undefined,
  "shape": Object {
    "deep": Object {
      "nested": "",
    },
    "id": -1,
    "object": Object {},
  },
  "value": -1,
}
`;

exports[`Suite parsers should select an strategy for recursivity 1`] = `Object {}`;

exports[`Suite parsers should select an strategy for recursivity 2`] = `Object {}`;

exports[`Suite parsers should transform a definition using mutators 1`] = `
Object {
  "memo": Object {
    "extra": "attribute",
    "memo": Object {},
  },
  "name": "Ada Lovelace",
  "year": 1852,
}
`;

exports[`Suite schema should return a new fulfilled object after transform 1`] = `Object {}`;

exports[`Suite schema should return a new fulfilled object with mutators 1`] = `
Object {
  "memo": Object {
    "extra": "attribute",
    "memo": Object {},
  },
  "year": 1852,
}
`;

exports[`Suite schema should return the default values 1`] = `
Object {
  "arr": undefined,
  "dispatch": undefined,
  "func": undefined,
  "shape": Object {
    "deep": Object {
      "nested": "",
    },
    "id": -1,
    "object": Object {},
  },
  "value": -1,
}
`;

exports[`Suite types should have exist all the defined types 1`] = `
Object {
  "iterable": false,
  "propTypes": [Function],
  "value": Array [],
}
`;

exports[`Suite types should have exist all the defined types 2`] = `
Object {
  "iterable": false,
  "propTypes": [Function],
  "value": true,
}
`;

exports[`Suite types should have exist all the defined types 3`] = `
Object {
  "iterable": false,
  "propTypes": [Function],
  "value": undefined,
}
`;

exports[`Suite types should have exist all the defined types 4`] = `
Object {
  "iterable": false,
  "propTypes": [Function],
  "value": -1,
}
`;

exports[`Suite types should have exist all the defined types 5`] = `
Object {
  "iterable": false,
  "propTypes": [Function],
  "value": Object {},
}
`;

exports[`Suite types should have exist all the defined types 6`] = `
Object {
  "iterable": false,
  "propTypes": [Function],
  "value": "",
}
`;

exports[`Suite types should have exist all the defined types 7`] = `
Object {
  "iterable": false,
  "propTypes": [Function],
  "value": [Function],
}
`;

exports[`Suite types should have exist all the defined types 8`] = `
Object {
  "iterable": false,
  "propTypes": [Function],
  "value": true,
}
`;

exports[`Suite types should have exist all the defined types 9`] = `
Object {
  "iterable": false,
  "propTypes": [Function],
  "value": false,
}
`;

exports[`Suite types should have exist all the defined types 10`] = `
Object {
  "iterable": false,
  "propTypes": [Function],
  "value": false,
}
`;

exports[`Suite types should have exist all the defined types 11`] = `
Object {
  "iterable": false,
  "propTypes": [Function],
  "value": false,
}
`;

exports[`Suite types should have exist all the defined types 12`] = `[Function]`;

exports[`Suite types should have exist all the defined types 13`] = `[Function]`;

exports[`Suite types should have exist all the defined types 14`] = `[Function]`;

exports[`Suite types should have exist all the defined types 15`] = `[Function]`;

exports[`Suite types should have exist all the defined types 16`] = `[Function]`;
